18 / 12 / 7 / 35 / 4

2.4.12
- Add universal curio slot to curse of Flesh
- Add hands slot to curse of Tension
- Make Curse of Spell damage won't be scaled by itself

2.4.11
- Fix item disappearing when removing necklace or bracelet

2.4.10
- Fix language and translation
- Fix attribute removal
- Curse of Spell hurts player 1 heart when having spell overload

2.4.9
- Fix pandora tab not being able to open sometimes (again)

2.4.8
- Fix snow walker not immune to freeze
- Improve curse charm textures
- Fix pandora tab not being able to open sometimes

2.4.7
- Fix Charm of protection not using mult-total
- Fix Abyssal Will text
- Fix compat with right click equip curios
- Add unique texture and particle for swords

2.4.6
- Fix server launch crash

2.4.5
- Add config to chest loot
- Fix curse of flesh
- Fix Abyssal set not taking effect
- Fix pandora slot desync in client when taking out curses in non-first row

2.4.4
- Add Abyssal / Barbaric / Evil Spirit series, charm of luck
- Add 4 weapons
- Add crafting ingredients, tweak recipes
-

2.4.3
- Fix language
- Recipe adjustment
- Fix toml dependency check
- Incorporate L2Complement immunity config for immunity orbs

2.4.2
- Fix L2Hostility code dependency, fix bugs