@@ -23,7 +23,7 @@
   "curseofpandora.tooltip.curse.metabolism_3": "uoıʇɔnpǝɹ pǝǝds ןןɐ ǝʇɐbǝu puɐ 'pǝǝds puɐ ʞɔɐʇʇɐ %s%% uıɐb 'ןןnɟ sı ןǝʌǝן pooɟ uǝɥM",
   "curseofpandora.tooltip.curse.proximity": "˙snuoq ɥɔɐǝɹ ʞɔɐʇʇɐ %s%% ʇuɐɹb 'ɹǝʍoן ɹo %s sı ɥɔɐǝɹ ʞɔɐʇʇɐ ɹǝʎɐןd uǝɥM ˙%s oʇ ɥɔɐǝɹ ʞɔɐʇʇɐ ɹǝʎɐןd dɐƆ ˙snuoq ɥɔɐǝɹ ʞɔɐʇʇɐ ןooʇ-uou ɹǝɥʇo ןןɐ ǝʇɐbǝN",
   "curseofpandora.tooltip.curse.prudence_1": "˙)ǝןqɐʞɔɐʇs( %s%%- ןןıʍ puoɔǝs %s ʇxǝu ǝɥʇ ɹoɟ ʇǝbɹɐʇ ǝɯɐs ǝɥʇ oʇ ǝbɐɯɐp ɹnoʎ 'ʇǝbɹɐʇ ɐ ʇıɥ noʎ uǝɥM",
-  "curseofpandora.tooltip.curse.prudence_2": "˙ɥʇןɐǝɥ xɐɯ ʇǝbɹɐʇ ɟo %s%% pǝǝɔxǝ ʇouuɐɔ ʇǝbɹɐʇ ɐ ʇsuıɐbɐ ʇןɐǝp ǝbɐɯɐp ɹnoʎ",
+  "curseofpandora.tooltip.curse.prudence_2": "˙ɥʇןɐǝɥ xɐɯ ʇǝbɹɐʇ ɟo %s%% pǝǝɔxǝ ʇouuɐɔ noʎ uɐɥʇ ɹǝɥbıɥ ɥʇןɐǝɥ ɥʇıʍ ʇǝbɹɐʇ ɐ ʇsuıɐbɐ ʇןɐǝp ǝbɐɯɐp ɹnoʎ",
   "curseofpandora.tooltip.curse.spell_1": "˙ʇɐɥʇ ǝʇɐbıʇıɯ oʇ ǝɔuɐɹǝןoʇ ןןǝds uıɐb puɐ ʎʇıuıɟɟɐ ʇuǝɯʇuɐɥɔuǝ ɥbıɥ ɥʇıʍ sʇuǝɯdınbǝ ǝs∩ ˙ʇןɐǝp noʎ ǝbɐɯɐp ǝɔnpǝɹ puɐ ǝʞɐʇ noʎ ǝbɐɯɐp ǝsɐǝɹɔuı 'noʎ ʇɹnɥ 'noʎ uo uǝpɹnq ɐ ʇnd ןןıʍ sɹoɯɹɐ puɐ suodɐǝʍ ɹnoʎ uo sʇuǝɯʇuɐɥɔuƎ",
   "curseofpandora.tooltip.curse.spell_2": "%s%% :pɐoןɹǝʌo ןןǝds ןɐʇoʇ ʇuǝɹɹnƆ",
   "curseofpandora.tooltip.curse.spell_3": "%s%% :pɐoן ןןǝds ɯǝʇI",
