@@ -1,5 +1,5 @@
 {
-  "exhaustion": 0.1,
+  "exhaustion": 0.0,
   "message_id": "spell_curse",
   "scaling": "never"
 }
